# pystream

./: .gitignore  pyproject.toml  rough.txt
pystream/: videostreamer.py
